--- a/jch_BExplore/index.html
+++ b/jch_BExplore/index.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
 <html>
-  <head>
+
+<head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <title>jch_explore</title>
-  </head>
-  <body>
+    <title>井创SWTC公链浏览器</title>
+</head>
+
+<body style="margin:0px">
     <div id="app"></div>
     <!-- built files will be auto injected -->
-  </body>
+</body>
+
 </html>
