--- a/jch_BExplore/index.html
+++ b/jch_BExplore/index.html
@@ -7,7 +7,7 @@
     <title>井创SWTC公链浏览器</title>
 </head>
 
-<body style="margin:0px">
+<body style="margin:0px;height: 100%;">
     <div id="app"></div>
     <!-- built files will be auto injected -->
 </body>
